--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,483 @@
-a {
-  font-family: "Aleo", serif; }
+#menu__toggle {
+  display: none; }
 
-p {
-  font-family: "Josefin Sans", sans-serif; }
+.container {
+  max-width: 1110px;
+  margin: 0 auto;
+  padding: 0 10px; }
 
-h1 {
-  font-weight: bold; }
+.header {
+  background: url(../img/header-bg.png);
+  background-size: cover;
+  position: relative; }
+  .header-nav {
+    background-color: #5474fd; }
+    .header-nav .container {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      padding: 35px 0 35px 10px; }
+    .header-nav__item {
+      padding: 0 30px;
+      font-size: 14px;
+      text-align: center; }
+      .header-nav__item a {
+        color: #ffffff;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-family: "Aleo", serif; }
+    .header-nav__logo {
+      margin-right: auto; }
+      .header-nav__logo a {
+        font-size: 24px;
+        font-weight: bold;
+        color: #ffffff;
+        font-family: "Aleo", serif;
+        text-transform: uppercase;
+        text-decoration: none; }
+  .header-search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+    .header-search__title {
+      margin-top: 160px;
+      font-size: 48px;
+      color: #fff;
+      font-family: "Josefin Sans", sans-serif;
+      text-transform: uppercase; }
+    .header-search__text {
+      margin-top: 15px;
+      font-size: 22px;
+      color: #fff;
+      font-family: "Josefin Sans", sans-serif;
+      letter-spacing: 4px;
+      font-weight: 300; }
+    .header-search__form {
+      margin-top: 45px;
+      height: 60px;
+      display: flex;
+      flex-direction: row;
+      border: none;
+      align-items: center;
+      margin-bottom: 290px; }
+      .header-search__form input {
+        width: 500px;
+        height: 100%;
+        border: none;
+        padding-left: 120px;
+        letter-spacing: 3px;
+        color: #c2c2c2; }
+      .header-search__form button {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        color: #fff;
+        text-transform: uppercase;
+        align-items: center;
+        height: 100%;
+        background-color: #5474fd;
+        border: 2px solid #fff;
+        width: 145px;
+        padding: 12px;
+        font-size: 14px;
+        text-transform: uppercase;
+        font-family: "Aleo", serif;
+        cursor: pointer; }
+        .header-search__form button p {
+          padding-right: 14px;
+          letter-spacing: 2px; }
+  .header .scroll {
+    position: absolute;
+    left: 47%;
+    bottom: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+    .header .scroll a {
+      color: #fff;
+      font-family: "Josefin Sans", sans-serif;
+      text-decoration: none;
+      padding-bottom: 10px;
+      letter-spacing: 2px; }
+
+.choose {
+  background: url(../img/choose-bg.png);
+  background-size: cover;
+  padding: 120px 0 120px 0; }
+  .choose .container {
+    display: flex;
+    justify-content: space-between; }
+  .choose-content {
+    padding-top: 80px;
+    width: 540px; }
+    .choose-content__title {
+      font-size: 36px;
+      color: #ffffff;
+      font-family: "Aleo", serif;
+      font-weight: 400;
+      margin-bottom: 60px; }
+    .choose-content__text {
+      font-size: 16px;
+      font-weight: 300;
+      color: #ffffff;
+      font-family: "Josefin Sans", sans-serif; }
+      .choose-content__text span {
+        display: inline-block;
+        margin-top: 30px;
+        margin-bottom: 40px; }
+    .choose-content__btn {
+      font-family: "Aleo", serif;
+      color: #ffffff;
+      background-color: #5474fd;
+      border: none;
+      padding: 20px 0;
+      width: 225px;
+      font-size: 16px;
+      transition: all 0.3s ease;
+      cursor: pointer;
+      text-transform: uppercase; }
+      .choose-content__btn:hover {
+        transform: scale(1.1); }
+  .choose-img {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; }
+    .choose-img__top {
+      margin-right: 125px;
+      margin-bottom: 4px; }
+
+.stage {
+  background-color: #333333;
+  padding: 90px 0 110px 0; }
+  .stage .container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    position: relative; }
+    .stage .container .sv-dots {
+      position: absolute;
+      bottom: 100px;
+      left: 160px;
+      width: 70%; }
+    .stage .container .icon__sv-dots {
+      stroke: #fff;
+      stroke-linecap: round;
+      stroke-width: 1px;
+      stroke-dasharray: 2;
+      fill: none;
+      opacity: 0.5;
+      fill-rule: evenodd; }
+  .stage-card {
+    background-color: #333333;
+    border-radius: 50%;
+    z-index: 2; }
+    .stage-card__img {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 25px; }
+    .stage-card__text {
+      font-size: 36px;
+      color: #fff;
+      font-family: "Aleo", serif; }
+
+.place-first {
+  background: url(../img/bg-book-top.png);
+  background-size: cover;
+  height: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; }
+  .place-first .container {
+    width: 1110px;
+    display: flex;
+    justify-content: flex-start; }
+
+.place-description {
+  width: 540px;
+  height: 370px;
+  background-color: rgba(45, 40, 41, 0.7);
+  padding: 50px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+  .place-description__country {
+    font-size: 20px;
+    font-weight: 300;
+    font-family: "Josefin Sans", sans-serif;
+    color: #ffffff; }
+  .place-description__title {
+    font-size: 20px;
+    font-weight: 300;
+    font-family: "Josefin Sans", sans-serif;
+    color: #ffffff; }
+  .place-description__text {
+    font-size: 16px;
+    font-weight: 300;
+    font-family: "Josefin Sans", sans-serif;
+    color: #ffffff; }
+  .place-description__btn {
+    font-family: "Aleo", serif;
+    color: #ffffff;
+    background-color: #5474fd;
+    border: none;
+    padding: 20px 60px;
+    width: 225px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease; }
+    .place-description__btn:hover {
+      transform: scale(1.1); }
+
+.place-second {
+  background: url(../img/bg-book-bottom.png);
+  background-size: cover;
+  height: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; }
+  .place-second .container {
+    width: 1110px;
+    display: flex;
+    justify-content: flex-end; }
+
+.place-description {
+  width: 540px;
+  height: 370px;
+  background-color: rgba(45, 40, 41, 0.7);
+  padding: 50px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+  .place-description__country {
+    font-size: 20px;
+    font-weight: 300;
+    font-family: "Josefin Sans", sans-serif;
+    color: #ffffff; }
+  .place-description__title {
+    font-size: 20px;
+    font-weight: 300;
+    font-family: "Josefin Sans", sans-serif;
+    color: #ffffff;
+    text-transform: uppercase; }
+  .place-description__text {
+    font-size: 16px;
+    font-weight: 300;
+    font-family: "Josefin Sans", sans-serif;
+    color: #ffffff; }
+  .place-description__btn {
+    font-family: "Aleo", serif;
+    color: #ffffff;
+    background-color: #5474fd;
+    border: none;
+    font-size: 16px;
+    padding: 20px 60px;
+    width: 225px;
+    text-transform: uppercase;
+    cursor: pointer; }
+
+.testimonials {
+  background: url(../img/tourist-bg.png);
+  background-size: cover;
+  padding-bottom: 200px; }
+  .testimonials__title {
+    text-align: center;
+    color: #ffffff;
+    font-family: "Aleo", serif;
+    font-size: 36px;
+    padding: 115px 0 100px 0; }
+  .testimonials-card {
+    background: #333333;
+    display: flex;
+    height: 280px; }
+    .testimonials-card-body {
+      padding: 45px 50px; }
+      .testimonials-card-body__title {
+        font-size: 20px;
+        font-family: "Josefin Sans", sans-serif;
+        text-transform: uppercase;
+        color: #fff;
+        margin-bottom: 30px; }
+      .testimonials-card-body__text {
+        font-size: 14px;
+        font-family: "Josefin Sans", sans-serif;
+        color: #fff;
+        line-height: 23px;
+        font-weight: 300; }
+        .testimonials-card-body__text i {
+          color: #5474fd;
+          padding-right: 10px;
+          margin-bottom: 10px; }
+
+.footer {
+  background-color: #232323;
+  display: flex;
+  justify-content: center;
+  padding: 115px 0 45px 0; }
+  .footer-content {
+    width: 180px;
+    text-align: center; }
+    .footer-content__title {
+      font-size: 24px;
+      font-weight: bold;
+      font-family: "Josefin Sans", sans-serif;
+      text-transform: uppercase;
+      color: #ffffff;
+      margin-bottom: 10px;
+      letter-spacing: 4px; }
+    .footer-content__text {
+      font-size: 16px;
+      font-family: "Josefin Sans", sans-serif;
+      font-weight: 400;
+      color: #ffffff;
+      margin-bottom: 25px;
+      letter-spacing: 1px; }
+    .footer-content-social {
+      display: flex;
+      justify-content: space-around; }
+      .footer-content-social a {
+        color: #ffffff;
+        transition: all 0.3s ease; }
+        .footer-content-social a:hover {
+          color: #5474fd; }
+
+@media screen and (max-width: 1100px) {
+  .stage .container .sv-dots {
+    display: none; } }
+
+@media screen and (max-width: 920px) {
+  .testimonials-card {
+    flex-direction: column;
+    height: auto;
+    width: 70%; }
+  .testimonials .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .choose .container {
+    flex-direction: column; }
+  .choose-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .choose-img {
+    align-items: center; }
+  .choose-img__top {
+    margin-right: 0; }
+  .choose-content__btn {
+    margin-bottom: 50px; }
+  #menu__toggle {
+    opacity: 0; }
+  .menu__btn {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 25px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    z-index: 10; }
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #5474fd; }
+  .menu__btn > span::before {
+    content: '';
+    top: -12px; }
+  .menu__btn > span::after {
+    content: '';
+    top: 12px; }
+  .header-nav {
+    z-index: 5;
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: -100%;
+    width: 100%;
+    height: 350px;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+    background-color: #5474fd;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2); }
+  .header-nav__item {
+    display: block;
+    color: #333;
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    width: 100%; }
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg); }
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+    background-color: #000000; }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+    background-color: #000000; }
+  #menu__toggle:checked ~ .header-nav {
+    visibility: visible;
+    top: 0; }
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    transition-timing-function: ease-in-out;
+    transition-duration: .5s; }
+  .header-nav {
+    transition-duration: .5s;
+    transition-timing-function: ease-in-out; }
+  .header-nav__item {
+    transition-duration: .5s;
+    transition-timing-function: ease-in-out; }
+  .header .header-nav__item {
+    margin: 0;
+    padding: 20px 0; }
+  .header .header-nav__item:before {
+    margin: 0;
+    content: ""; }
+  .header-nav__item {
+    padding: 0; }
+  .header-nav .container {
+    flex-direction: column; }
+  .header-nav__logo a {
+    color: #000; } }
+
+@media screen and (max-width: 678px) {
+  .header-search__form {
+    width: 100%; }
+  .header-search__form input {
+    padding-left: 10px; }
+  .header-search__text {
+    text-align: center; } }
+
+@media screen and (max-width: 576px) {
+  .place-description {
+    width: 100%; } }
+
+@media screen and (max-width: 500px) {
+  .testimonials {
+    padding-bottom: 50px; }
+  .footer {
+    padding: 80px 0 45px 0; }
+  .testimonials-card {
+    width: 100%; }
+  .header .scroll {
+    left: 40%; }
+  .place-description {
+    padding: 10px; }
+  .header-search__form input {
+    font-size: 10px; }
+  .stage-card {
+    margin: 40px 0; } }
 
 /*# sourceMappingURL=main.css.map */
